@@ -52,6 +52,8 @@ import org.testng.annotations.Test;
 
 import java.nio.file.Files;
 import java.time.LocalDateTime;
+import java.time.Instant;
+import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -63,6 +65,7 @@ import java.util.stream.Collectors;
 
 import static io.airlift.testing.Closeables.closeAllSuppress;
 import static io.trino.testing.TestingSession.testSessionBuilder;
+import static java.time.ZoneOffset.UTC;
 import static org.apache.paimon.data.BinaryString.fromString;
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -71,6 +74,14 @@ public abstract class TestTrinoITCase extends AbstractTestQueryFramework {
 
     private static final String CATALOG = "paimon";
     private static final String DB = "default";
+
+    protected long t2FirstCommitTimestamp;
+
+    private int trinoVersion;
+
+    public TestTrinoITCase(int trinoVersion) {
+        this.trinoVersion = trinoVersion;
+    }
 
     @Override
     protected QueryRunner createQueryRunner() throws Exception {
@@ -91,6 +102,7 @@ public abstract class TestTrinoITCase extends AbstractTestQueryFramework {
         testHelper2.write(GenericRow.of(1, 2L, fromString("1"), fromString("1")));
         testHelper2.write(GenericRow.of(3, 4L, fromString("2"), fromString("2")));
         testHelper2.commit();
+        t2FirstCommitTimestamp = System.currentTimeMillis();
         testHelper2.write(GenericRow.of(5, 6L, fromString("3"), fromString("3")));
         testHelper2.write(GenericRow.of(7, 8L, fromString("4"), fromString("4")));
         testHelper2.commit();
@@ -120,6 +132,23 @@ public abstract class TestTrinoITCase extends AbstractTestQueryFramework {
             writer.write(GenericRow.of(fromString("1"), 1, 2L, 2L, 2));
             writer.write(GenericRow.of(fromString("2"), 3, 3L, 3L, 3));
             commit.commit(0, writer.prepareCommit(true, 0));
+        }
+
+        {
+            Path tablePath = new Path(warehouse, "default.db/empty_t");
+            RowType rowType =
+                    new RowType(
+                            Arrays.asList(
+                                    new DataField(1, "a", new IntType()),
+                                    new DataField(2, "b", new BigIntType())));
+            new SchemaManager(LocalFileIO.create(), tablePath)
+                    .createTable(
+                            new Schema(
+                                    rowType.getFields(),
+                                    Collections.emptyList(),
+                                    Collections.emptyList(),
+                                    new HashMap<>(),
+                                    ""));
         }
 
         {
@@ -230,33 +259,99 @@ public abstract class TestTrinoITCase extends AbstractTestQueryFramework {
             RowType rowType =
                     new RowType(
                             Arrays.asList(
-                                    new DataField(0, "i", new IntType()),
-                                    new DataField(1, "createdtime", new TimestampType(0)),
-                                    new DataField(2, "updatedtime", new TimestampType(3)),
-                                    new DataField(3, "microtime", new TimestampType(6)),
+                                    new DataField(0, "boolean", DataTypes.BOOLEAN()),
+                                    new DataField(1, "tinyint", DataTypes.TINYINT()),
+                                    new DataField(2, "smallint", DataTypes.SMALLINT()),
+                                    new DataField(3, "int", DataTypes.INT()),
+                                    new DataField(4, "bigint", DataTypes.BIGINT()),
+                                    new DataField(5, "float", DataTypes.FLOAT()),
+                                    new DataField(6, "double", DataTypes.DOUBLE()),
+                                    new DataField(7, "char", DataTypes.CHAR(5)),
+                                    new DataField(8, "varchar", DataTypes.VARCHAR(100)),
+                                    new DataField(9, "date", DataTypes.DATE()),
+                                    new DataField(10, "timestamp_0", DataTypes.TIMESTAMP(0)),
+                                    new DataField(11, "timestamp_3", DataTypes.TIMESTAMP(3)),
+                                    new DataField(12, "timestamp_6", DataTypes.TIMESTAMP(6)),
                                     new DataField(
-                                            4,
-                                            "localzonedtime",
-                                            new org.apache.paimon.types.LocalZonedTimestampType(
-                                                    3))));
+                                            13,
+                                            "timestamp_tz",
+                                            DataTypes.TIMESTAMP_WITH_LOCAL_TIME_ZONE(3)),
+                                    new DataField(14, "decimal", DataTypes.DECIMAL(10, 5)),
+                                    new DataField(15, "varbinary", DataTypes.VARBINARY(10)),
+                                    new DataField(16, "array", DataTypes.ARRAY(DataTypes.INT())),
+                                    new DataField(
+                                            17,
+                                            "map",
+                                            DataTypes.MAP(DataTypes.INT(), DataTypes.INT())),
+                                    new DataField(
+                                            18,
+                                            "row",
+                                            DataTypes.ROW(
+                                                    DataTypes.FIELD(100, "q1", DataTypes.INT()),
+                                                    DataTypes.FIELD(101, "q2", DataTypes.INT())))));
             new SchemaManager(LocalFileIO.create(), tablePath6)
                     .createTable(
                             new Schema(
                                     rowType.getFields(),
-                                    Collections.emptyList(),
-                                    Collections.singletonList("i"),
-                                    new HashMap<>(),
+                                    List.of(
+                                            "boolean",
+                                            "tinyint",
+                                            "smallint",
+                                            "int",
+                                            "bigint",
+                                            "float",
+                                            "double",
+                                            "char",
+                                            "varchar",
+                                            "date",
+                                            "timestamp_0",
+                                            "timestamp_3",
+                                            "timestamp_6",
+                                            "timestamp_tz",
+                                            "decimal"),
+                                    List.of(
+                                            "boolean",
+                                            "tinyint",
+                                            "smallint",
+                                            "int",
+                                            "bigint",
+                                            "float",
+                                            "double",
+                                            "char",
+                                            "varchar",
+                                            "date",
+                                            "timestamp_0",
+                                            "timestamp_3",
+                                            "timestamp_6",
+                                            "timestamp_tz",
+                                            "decimal",
+                                            "varbinary"),
+                                    Collections.emptyMap(),
                                     ""));
             FileStoreTable table = FileStoreTableFactory.create(LocalFileIO.create(), tablePath6);
             InnerTableWrite writer = table.newWrite("user");
             InnerTableCommit commit = table.newCommit("user");
             writer.write(
                     GenericRow.of(
+                            true,
+                            (byte) 1,
+                            (short) 1,
                             1,
+                            1L,
+                            1.0f,
+                            1.0d,
+                            BinaryString.fromString("char1"),
+                            BinaryString.fromString("varchar1"),
+                            0,
                             Timestamp.fromMicros(1694505288000000L),
                             Timestamp.fromMicros(1694505288001000L),
                             Timestamp.fromMicros(1694505288001001L),
-                            Timestamp.fromMicros(1694505288002001L)));
+                            Timestamp.fromMicros(1694505288002001L),
+                            Decimal.fromUnscaledLong(10000, 10, 5),
+                            new byte[] {0x01, 0x02, 0x03},
+                            new GenericArray(new int[] {1, 1, 1}),
+                            new GenericMap(Map.of(1, 1)),
+                            GenericRow.of(1, 1)));
             commit.commit(0, writer.prepareCommit(true, 0));
         }
 
@@ -293,6 +388,11 @@ public abstract class TestTrinoITCase extends AbstractTestQueryFramework {
     public void testComplexTypes() {
         assertThat(sql("SELECT * FROM paimon.default.t4"))
                 .isEqualTo("[[1, {1=2}, [2, male], [1, 2, 3]]]");
+    }
+
+    @Test
+    public void testEmptyTable() {
+        assertThat(sql("SELECT * FROM paimon.default.empty_t")).isEqualTo("[]");
     }
 
     @Test
@@ -438,7 +538,7 @@ public abstract class TestTrinoITCase extends AbstractTestQueryFramework {
                         + "changelog_producer = 'input'"
                         + ")");
         assertThat(sql("SHOW TABLES FROM paimon.default"))
-                .isEqualTo("[[orders], [t1], [t2], [t3], [t4], [t99], [table_partition_filter]]");
+                .isEqualTo("[[empty_t], [orders], [t1], [t2], [t3], [t4], [t99], [table_partition_filter]]");
         sql("DROP TABLE IF EXISTS paimon.default.orders");
     }
 
@@ -461,7 +561,7 @@ public abstract class TestTrinoITCase extends AbstractTestQueryFramework {
                         + ")");
         sql("ALTER TABLE paimon.default.t5 RENAME TO t6");
         assertThat(sql("SHOW TABLES FROM paimon.default"))
-                .isEqualTo("[[t1], [t2], [t3], [t4], [t6], [t99], [table_partition_filter]]");
+                .isEqualTo("[[empty_t], [t1], [t2], [t3], [t4], [t6], [t99], [table_partition_filter]]");
         sql("DROP TABLE IF EXISTS paimon.default.t6");
     }
 
@@ -484,7 +584,7 @@ public abstract class TestTrinoITCase extends AbstractTestQueryFramework {
                         + ")");
         sql("DROP TABLE IF EXISTS paimon.default.t5");
         assertThat(sql("SHOW TABLES FROM paimon.default"))
-                .isEqualTo("[[t1], [t2], [t3], [t4], [t99], [table_partition_filter]]");
+                .isEqualTo("[[empty_t], [t1], [t2], [t3], [t4], [t99], [table_partition_filter]]");
     }
 
     @Test
@@ -582,20 +682,47 @@ public abstract class TestTrinoITCase extends AbstractTestQueryFramework {
     }
 
     @Test
-    public void testTimestamp0AndTimestamp3() {
-        assertThat(sql("SELECT i, createdtime, updatedtime, microtime FROM paimon.default.t99"))
+    public void testAllType() {
+        assertThat(
+                        sql(
+                                "SELECT boolean, tinyint, smallint,int,bigint,float,double,char,varchar, date,timestamp_0, "
+                                        + "timestamp_3, timestamp_6, timestamp_tz, decimal, to_hex(varbinary), array, map, row FROM paimon.default.t99"))
                 .isEqualTo(
-                        "[[1, 2023-09-12T07:54:48, 2023-09-12T07:54:48.001, 2023-09-12T07:54:48.001001]]");
+                        "[[true, 1, 1, 1, 1, 1.0, 1.0, char1, varchar1, 1970-01-01, "
+                                + "2023-09-12T07:54:48, 2023-09-12T07:54:48.001, 2023-09-12T07:54:48.001001, "
+                                + "2023-09-12T07:54:48.002Z[UTC], 0.10000, 010203, [1, 1, 1], {1=1}, [1, 1]]]");
     }
 
     @Test
-    public void testTimestampWithTimeZone() {
-        assertThat(sql("SELECT localzonedtime FROM paimon.default.t99"))
-                .isEqualTo("[[2023-09-12T07:54:48.002Z[UTC]]]");
+    public void testTimeTravel() {
+        if (trinoVersion < 368) {
+            return;
+        }
+        assertThat(sql("SELECT * FROM paimon.default.t2 FOR VERSION AS OF 1"))
+                .isEqualTo("[[1, 2, 1, 1], [3, 4, 2, 2]]");
+        assertThat(sql("SELECT * FROM paimon.default.t2 FOR VERSION AS OF 2"))
+                .isEqualTo("[[1, 2, 1, 1], [3, 4, 2, 2], [5, 6, 3, 3], [7, 8, 4, 4]]");
+
+        assertThat(
+                        sql(
+                                "SELECT * FROM paimon.default.t2 FOR TIMESTAMP AS OF TIMESTAMP "
+                                        + timestampLiteral(t2FirstCommitTimestamp, 6)))
+                .isEqualTo("[[1, 2, 1, 1], [3, 4, 2, 2]]");
+        assertThat(
+                        sql(
+                                "SELECT * FROM paimon.default.t2 FOR TIMESTAMP AS OF TIMESTAMP "
+                                        + timestampLiteral(System.currentTimeMillis(), 6)))
+                .isEqualTo("[[1, 2, 1, 1], [3, 4, 2, 2], [5, 6, 3, 3], [7, 8, 4, 4]]");
     }
 
-    private String sql(String sql) {
+    protected String sql(String sql) {
         MaterializedResult result = getQueryRunner().execute(sql);
         return result.getMaterializedRows().toString();
+    }
+
+    protected static String timestampLiteral(long epochMilliSeconds, int precision) {
+        return DateTimeFormatter.ofPattern(
+                        "''yyyy-MM-dd HH:mm:ss." + "S".repeat(precision) + " VV''")
+                .format(Instant.ofEpochMilli(epochMilliSeconds).atZone(UTC));
     }
 }
